tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__strct_varg_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/strct-varg-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %25 = alloca s32i, "attr", align 4
        %26 = alloca rec_s, "va_values", align 4
        %27 = alloca rec___va_list_tag[1], "va", align 16
        %28 = alloca s32i, "i", align 4
        %29 = alloca rec_s, "vaarg.tmp", align 4
        %30 = alloca rec_s, "vaarg.tmp", align 4
        store %arg0, %25
        %31 = cast(array_to_ptrdecay) %27 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        scope {
            %65 = load %25 : s32i, align 4
            %66 = const 2 : s32i
            %67 = cmp ne %65, %66 : bool
            if %67 {
                %68 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %32 = cast(array_to_ptrdecay) %27 : rec___va_list_tag*
        <unmodeled: cir.va_arg>
        store %33, %29, align 4
        copy %26, %29
        scope {
            %54 = get_member %26[0] "x" : s32i*
            %55 = load %54 : s32i, align 4
            %56 = const 43690 : s32i
            %57 = cmp ne %55, %56 : bool
            %58 = ternary %57 ? { : bool
                %64 = const #true : bool
                yield %64
            } : {
                %60 = get_member %26[1] "y" : s32i*
                %61 = load %60 : s32i, align 4
                %62 = const 21845 : s32i
                %63 = cmp ne %61, %62 : bool
                yield %63
            }
            if %58 {
                %59 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %34 = cast(array_to_ptrdecay) %27 : rec___va_list_tag*
        <unmodeled: cir.va_arg>
        store %35, %25, align 4
        scope {
            %50 = load %25 : s32i, align 4
            %51 = const 3 : s32i
            %52 = cmp ne %50, %51 : bool
            if %52 {
                %53 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %36 = cast(array_to_ptrdecay) %27 : rec___va_list_tag*
        <unmodeled: cir.va_arg>
        store %37, %30, align 4
        copy %26, %30
        scope {
            %39 = get_member %26[0] "x" : s32i*
            %40 = load %39 : s32i, align 4
            %41 = const 65535 : s32i
            %42 = cmp ne %40, %41 : bool
            %43 = ternary %42 ? { : bool
                %49 = const #true : bool
                yield %49
            } : {
                %45 = get_member %26[1] "y" : s32i*
                %46 = load %45 : s32i, align 4
                %47 = const 4369 : s32i
                %48 = cmp ne %46, %47 : bool
                yield %48
            }
            if %43 {
                %44 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %38 = cast(array_to_ptrdecay) %27 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_s, "coerce", align 8
    %1 = alloca rec_s, "coerce", align 8
    %2 = alloca s32i, "__retval", align 4
    %3 = alloca rec_s, "a", align 4
    %4 = alloca rec_s, "b", align 4
    %5 = const 0 : s32i
    store %5, %2
    %6 = const 43690 : s32i
    %7 = get_member %3[0] "x" : s32i*
    store %6, %7, align 4
    %8 = const 21845 : s32i
    %9 = get_member %3[1] "y" : s32i*
    store %8, %9, align 4
    %10 = const 65535 : s32i
    %11 = get_member %4[0] "x" : s32i*
    store %10, %11, align 4
    %12 = const 4369 : s32i
    %13 = get_member %4[1] "y" : s32i*
    store %12, %13, align 4
    %14 = const 2 : s32i
    %15 = const 3 : s32i
    %16 = load %3 : rec_s, align 4
    %17 = load %4 : rec_s, align 4
    store %16, %1
    %18 = cast(bitcast) %1 : u64i*
    %19 = load %18 : u64i
    store %17, %0
    %20 = cast(bitcast) %0 : u64i*
    %21 = load %20 : u64i
    call @f(%14, %19, %15, %21) [all]
    %22 = get_global @exit : ((s32i) -> void)*
    %23 = const 0 : s32i
    call @exit(%23) [all]
    %24 = load %2 : s32i
    return %24
}
