tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__strlen_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/strlen-1.c" (c, x86_64-unknown-linux-gnu)
global u : rec_anon2E0 = zero [internal, default, align 16, dso_local]

fn strlen(%arg0: s8i*) -> u64i [external, c, pure, nothrow];
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u64i, "off", align 8
    %2 = alloca u64i, "len", align 8
    %3 = alloca u64i, "len2", align 8
    %4 = alloca u64i, "i", align 8
    %5 = alloca s8i*, "p", align 8
    %6 = const 0 : s32i
    store %6, %0
    scope {
        %10 = const 0 : u64i
        store %10, %1, align 8
        for cond: {
            %70 = load %1 : u64i, align 8
            %71 = const 8 : u64i
            %72 = cmp lt %70, %71 : bool
            condition %72
        } step: {
            %11 = load %1 : u64i, align 8
            %12 = inc %11 : u64i
            store %12, %1, align 8
            yield
        } do {
            scope {
                %13 = const 0 : u64i
                store %13, %2, align 8
                for cond: {
                    %65 = load %2 : u64i, align 8
                    %66 = const 8 : u64i
                    %67 = const 8 : u64i
                    %68 = mul %66, %67 : u64i
                    %69 = cmp lt %65, %68 : bool
                    condition %69
                } step: {
                    %14 = load %2 : u64i, align 8
                    %15 = inc %14 : u64i
                    store %15, %2, align 8
                    yield
                } do {
                    scope {
                        %16 = get_global @u : rec_anon2E0*
                        %17 = get_member %16[0] "buf" : s8i[81]*
                        %18 = cast(array_to_ptrdecay) %17 : s8i*
                        store %18, %5, align 8
                        scope {
                            %55 = const 0 : u64i
                            store %55, %4, align 8
                            for cond: {
                                %62 = load %4 : u64i, align 8
                                %63 = load %1 : u64i, align 8
                                %64 = cmp lt %62, %63 : bool
                                condition %64
                            } step: {
                                %56 = load %4 : u64i, align 8
                                %57 = inc %56 : u64i
                                store %57, %4, align 8
                                yield
                            } do {
                                %58 = const 0 : s8i
                                %59 = load %5 : s8i*, align 8
                                %60 = const 1 : s32i
                                %61 = ptr_stride %59, %60 : s8i*
                                store %61, %5, align 8
                                store %58, %59, align 1
                                yield
                            }
                            yield
                        }
                        scope {
                            %45 = const 0 : u64i
                            store %45, %4, align 8
                            for cond: {
                                %52 = load %4 : u64i, align 8
                                %53 = load %2 : u64i, align 8
                                %54 = cmp lt %52, %53 : bool
                                condition %54
                            } step: {
                                %46 = load %4 : u64i, align 8
                                %47 = inc %46 : u64i
                                store %47, %4, align 8
                                yield
                            } do {
                                %48 = const 97 : s8i
                                %49 = load %5 : s8i*, align 8
                                %50 = const 1 : s32i
                                %51 = ptr_stride %49, %50 : s8i*
                                store %51, %5, align 8
                                store %48, %49, align 1
                                yield
                            }
                            yield
                        }
                        %19 = const 0 : s8i
                        %20 = load %5 : s8i*, align 8
                        %21 = const 1 : s32i
                        %22 = ptr_stride %20, %21 : s8i*
                        store %22, %5, align 8
                        store %19, %20, align 1
                        scope {
                            %35 = const 0 : u64i
                            store %35, %4, align 8
                            for cond: {
                                %42 = load %4 : u64i, align 8
                                %43 = const 8 : u64i
                                %44 = cmp lt %42, %43 : bool
                                condition %44
                            } step: {
                                %36 = load %4 : u64i, align 8
                                %37 = inc %36 : u64i
                                store %37, %4, align 8
                                yield
                            } do {
                                %38 = const 98 : s8i
                                %39 = load %5 : s8i*, align 8
                                %40 = const 1 : s32i
                                %41 = ptr_stride %39, %40 : s8i*
                                store %41, %5, align 8
                                store %38, %39, align 1
                                yield
                            }
                            yield
                        }
                        %23 = get_global @u : rec_anon2E0*
                        %24 = get_member %23[0] "buf" : s8i[81]*
                        %25 = cast(array_to_ptrdecay) %24 : s8i*
                        %26 = load %1 : u64i, align 8
                        %27 = ptr_stride %25, %26 : s8i*
                        store %27, %5, align 8
                        %28 = get_global @strlen : ((s8i*) -> u64i)*
                        %29 = load %5 : s8i*, align 8
                        %30 = call @strlen(%29) : u64i [pure]
                        store %30, %3, align 8
                        scope {
                            %31 = load %2 : u64i, align 8
                            %32 = load %3 : u64i, align 8
                            %33 = cmp ne %31, %32 : bool
                            if %33 {
                                %34 = get_global @abort : (() -> void)*
                                call @abort() [all]
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %7 = get_global @exit : ((s32i) -> void)*
    %8 = const 0 : s32i
    call @exit(%8) [all]
    %9 = load %0 : s32i
    return %9
}
