tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ini_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/struct-ini-1.c" (c, x86_64-unknown-linux-gnu)
global object : rec_S = {88, [8, 9]} [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = get_global @object : rec_S*
        %6 = get_member %5[0] "f1" : s8i*
        %7 = load %6 : s8i, align 4
        %8 = cast(integral) %7 : s32i
        %9 = const 88 : s32i
        %10 = cmp ne %8, %9 : bool
        %11 = ternary %10 ? { : bool
            %29 = const #true : bool
            yield %29
        } : {
            %22 = const 0 : s64i
            %23 = get_global @object : rec_S*
            %24 = get_member %23[1] "f2" : s32i[2]*
            %25 = get_element %24[%22] : s32i*
            %26 = load %25 : s32i, align 4
            %27 = const 8 : s32i
            %28 = cmp ne %26, %27 : bool
            yield %28
        }
        %12 = ternary %11 ? { : bool
            %21 = const #true : bool
            yield %21
        } : {
            %14 = const 1 : s64i
            %15 = get_global @object : rec_S*
            %16 = get_member %15[1] "f2" : s32i[2]*
            %17 = get_element %16[%14] : s32i*
            %18 = load %17 : s32i, align 4
            %19 = const 9 : s32i
            %20 = cmp ne %18, %19 : bool
            yield %20
        }
        if %12 {
            %13 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
