tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ini_4.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-ini-4.c" (c, x86_64-unknown-linux-gnu)
global s : rec_s = {zero, [1, 2, 3]} [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = const 0 : s64i
        %6 = get_global @s : rec_s*
        %7 = get_member %6[1] "c" : s32i[3]*
        %8 = get_element %7[%5] : s32i*
        %9 = load %8 : s32i, align 4
        %10 = const 1 : s32i
        %11 = cmp ne %9, %10 : bool
        if %11 {
            %12 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
